# dingo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AUTHORS.md  CLAUDE.md  HYDRA_TODO.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: docs.yml  lint.yml  pytest.yml
agents_md_files/: AGENTS.md  heinrich.md  max.md  nihar.md  stephen.md
agents_md_files/cedric/: AGENTS.md  CLAUDE.md
agents_md_files/experiment/: build_report.py  metrics.json  report.html
binary_neutron_stars/prototyping/: adaptive_bands.ipynb  bns_transforms.py  decimate_asds.py  heterodyning.py  main.py  main_mismatches.py  main_rb.py  main_wfd.py  mismatches.ipynb  multibanded_frequency_domain.py  multibanding_utils.py  psd_decimation.ipynb  psds_real_events.ipynb  waveform_dataset_settings.yaml
binary_neutron_stars/scripts/: chirp_mass_scan.py  compute_mismatches_mfd.py  create_asd_dataset.py  create_asd_dataset_design_sensitivity.py  create_dingo_pipe_directories.py  equation_of_state_integration.py  equation_of_state_integration_new.py  fit_sky_maps.py  injections.py  pp_utils.py  pre_importance_sampling.py
ci/: Dockerfile  README.md  dingo-ci  dingo-ci-email-trigger  dingo-ci-email.service  dingo-ci-email.timer  dingo-ci-trigger  dingo-ci.service  dingo-ci.timer  email.json  email_helpers.py  fetch_matching_email.py  mark_email_seen.py  send_ack_email.py
compatibility/: remove_domain_window_factor.py  update_model_input_dims.py  update_model_metadata.py  update_saved_model_for_train_stages.py  update_saved_model_gnpe_context_names.py  update_saved_model_new_gnpe.py  update_saved_model_new_truncation.py  update_waveform_dataset_svd_refactor.py
configs/: append_training_stage.yaml  estimate_psds.yaml  evaluate_multibanded_domain.yaml  generate_asd_dataset.yaml  generate_dataset.yaml  generate_synthetic_asd_dataset.yaml  importance_weights.yaml  merge_asd_datasets.yaml  train.yaml  unconditional_density_estimation.yaml
configs/domain/: multibanded_frequency.yaml  uniform_frequency.yaml
configs/experiment/: asd_fiducial.yaml  asd_full.yaml  asd_toy.yaml  generate_fmpe_dataset.yaml  generate_gnpe_dataset.yaml  generate_npe_dataset.yaml  generate_toy_dataset.yaml  importance_sampling.yaml  synthetic_asd.yaml  train_fmpe.yaml  train_gnpe.yaml  train_gnpe_init.yaml  train_npe.yaml  train_toy.yaml
configs/extrinsic_prior/: default.yaml  fmpe.yaml
configs/hydra/: default.yaml
configs/intrinsic_prior/: default.yaml  fmpe.yaml  precessing.yaml  precessing_multibanded_test.yaml
configs/model/: fmpe.yaml  gnpe_init.yaml  npe.yaml  toy_npe.yaml  unconditional_npe.yaml
configs/optimizer/: adam.yaml
configs/scheduler/: cosine.yaml
configs/waveform_generator/: phenom_d.yaml  phenom_pv2.yaml  phenom_xphm.yaml
dingo/: __init__.py  _version.py
dingo/api/: __init__.py  dataset.py  info.py  train_setup.py  train_setup_new.py  utils.py
dingo/asimov/: asimov.py  dingo.ini
dingo/core/: SVD.py  dataset.py  factors.py  likelihood.py  multiprocessing.py  nn.py  registry.py  result.py  sampler.py  samplers.py  samples_dataset.py  transforms.py
dingo/gw/: SVD.py  __init__.py  approximant.py  bayestar_utils.py  detector_network.py  domains.py  download_strain_data.py  frequency_updates.py  gwutils.py  imports.py  injection.py  likelihood.py  logs.py  ls_cli.py  noise.py  noise_dataset.py  parameters.py  posterior.py  prior.py  prior_split.py  result.py  temporary_debug_utils.py  training.py  transforms.py  transforms_parameters.py  types.py  waveform_dataset.py  waveform_generator.py
dingo/pipe/: asimov.py  create_injections.py  dag_creator.py  data_generation.py  default_settings.py  dingo_result.py  gracedb.py  importance_sampling.py  main.py  parser.py  plot.py  pp_test.py  sampling.py  utils.py
dingo/populations/: generate_base_population.py  generate_population.py  injection.py  pdfs.py  population_dataset.py  population_models.py  power_law_gaussian_pdfs.py  power_law_peak_class.py  samplers.py  training.py  utilities.py
docker/: Dockerfile  README.md  check_gpu.bash  dingo-toy-npe-model-ci.service  dingo.bash  email.json  mpi-email.json  report_email.bash  run_dingo_ci.bash  run_mini.bash  run_mini2.bash  run_toy_npe_model.bash  setup_dingo.bash  setup_run_directory.bash  setup_variables.bash
docker/npe_model/: Dockerfile  run_npe_model.bash
docker/toy_npe_model/: Dockerfile  run_toy_npe_model.bash
docs/: README.md
docs/source/: .gitignore  _quarto.yml  asimov.md  asimov.qmd  bns.md  build_api.py  code_design.md  code_design.qmd  conf.py  custom-dark.scss  custom.scss  design_philosophy.md  dingo.api.rst  dingo.core.density.rst  dingo.core.models.rst  dingo.core.nn.rst  dingo.core.rst  dingo.core.utils.rst  dingo.gw.ASD_dataset.rst  dingo.gw.dataset.rst  dingo.gw.importance_sampling.rst  dingo.gw.inference.rst  dingo.gw.rst  dingo.gw.training.rst  dingo.gw.transforms.rst  dingo.rst  dingo_pipe.md  dingo_pipe.qmd  example_gnpe_model.md  example_gnpe_model.qmd  example_gnpe_network.md  example_injection.md  example_injection.qmd  example_no_gnpe_network.md  example_toy.md  (+43 more)
examples/: README.md  is_settings.yaml
misc_scripts/: bilby_settings.yaml  create_training_directories.py  evaluation.py  injection_from_sample_file.py  merge_old_weights_into_new_model.py  merge_sample_files.py  monitor_cluster_runs.py  multi-runs.py  plot_history.py  population_pp.py  pt_to_hdf5.py  run_bilby.py
multibanding/: adaptive_bands_for_EOB_O4b-review.ipynb  adaptive_bands_transformer.ipynb
old_examples/: append_training_stage.yaml  estimate_psds.yaml  evaluate_multibanded_domain.yaml  generate_asd_dataset.yaml  generate_dataset.yaml  generate_synthetic_asd_dataset.yaml  importance_weights.yaml  merge_asd_datasets.yaml  train.yaml  unconditional_density_estimation.yaml
tests/: conftest.py  test_domains.py  test_enets.py  test_hydra_config_targets.py  test_nsf.py  test_parameters.py  test_posterior_model.py  test_waveform_generator.py  testutils.py  testutils_enets.py
tutorials/: toy_example.py  toy_example_transforms.py  toy_example_utils.py
(+523 files in other folders)
