[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "dingo-gw"
version = "0.3.0"
authors = [ 
    {name = "Maximilian Dax", email = "maximilian.dax@tuebingen.mpg.de"},
    {name = "Stephen Green", email = "Stephen.Green2@nottingham.ac.uk"},
    {name = "Nihar Gupte", email = "nihar.gupte@aei.mpg.de"},
    {name = "Michael Puerrer", email = "mpuerrer@uri.edu"},
    {name = "Jonas Wildberger", email = "wildberger.jonas@tuebingen.mpg.de"},
]
description = "\"A library for deep bayesian inference with GNPE.\""
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"

classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "glasflow",
    "scipy",
    "pyyaml",
    "h5py",
    "bilby",
    "bilby_pipe",
    "configargparse",
    "astropy",
    "lalsuite>=7.11",
    "sklearn",
    "pesummary",
    "tensorboard",
    "pyopenssl",
    "cryptography",
    "pycondor",
    "gwpy",
    "pycbc",
    "pandas",
    "threadpoolctl",
    "chainconsumer",
    "wandb",
    "scikit-learn",
]


[tool.setuptools]
packages = [
    "dingo",
    "dingo.core",
    "dingo.core.nn",
    "dingo.gw",
    "dingo.api",
]


[project.urls]
homepage = "https://github.com/dingo-gw/dingo-devel"


[project.optional-dependencies]
dev = [
        "pytest",
        "pylint",
        "black",
]


[project.scripts]
dingo_generate_dataset = "dingo.gw.dataset.generate_dataset:main"
dingo_generate_dataset_dag = "dingo.gw.dataset.generate_dataset_dag:main"
dingo_merge_datasets = "dingo.gw.dataset.utils:merge_datasets_cli"
dingo_build_svd = "dingo.gw.dataset.utils:build_svd_cli"
dingo_generate_ASD_dataset = "dingo.gw.ASD_dataset.generate_dataset:generate_dataset"
dingo_train = "dingo.gw.training:train_local"
dingo_train_condor = "dingo.gw.training.train_pipeline_condor:train_condor"
dingo_append_training_stage = "dingo.gw.training:append_stage"
dingo_analyze_event = "dingo.gw.inference:analyze_event"
dingo_ls = "dingo.gw.ls_cli:ls"
dingo_pipe = "dingo.gw.pipe.main:main"
dingo_pipe_generation = "dingo.gw.pipe.data_generation:main"
dingo_pipe_sampling = "dingo.gw.pipe.sampling:main"
dingo_pipe_importance_sampling = "dingo.gw.pipe.importance_sampling:main"

